Make footer into a sticky footer instead of a fixed one, fix footer layout so copyright text is visible.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,16 +3,21 @@
 
 html,
 body {
-  height: 100%;
   margin: 0;
   padding: 0;
 }
 
+html {
+  height: 100%;
+}
+
 html body {
+  position: relative;
+  min-height: 100%;
+  padding-bottom: 50px; /* Don't overlap the footer */
   font-family: Helvetica;
   background: #F2F2F2;
   font-size: 1.3em;
-  overflow: hidden;
 }
 
 a,
@@ -21,14 +26,6 @@ a:hover {
   color: #235A9F;
   outline: none;
   text-decoration: none;
-}
-
-#wrap {
-  min-height: 100%;
-  height: 100%;
-  margin: auto;
-  overflow: auto;
-  position: relative;
 }
 
 #topnav {
@@ -89,19 +86,9 @@ a:hover {
   background-color: #995099;
 }
 
-.scrollwrap {
-  position: absolute;
-  z-index: 0;
-  top: 52px;
-  bottom: 40px;
-  width: 100%;
-  overflow: auto;
-}
-
 .content {
   padding-left: 10%;
   padding-right: 10%;
-  margin-bottom: 40px; /* Don't overlap the footer */
   overflow: visible;
 }
 
@@ -110,7 +97,7 @@ a:hover {
   left: 0;
   right: 0;
   bottom: 0;
-  height: 40px;
+  height: 50px;
   background-color: #553355;
   padding: 10px;
   padding-left: 5px;
@@ -119,6 +106,7 @@ a:hover {
 }
 
 #footer .text-muted {
+  padding: 5px 0;
   color: #EEEEEE;
 }
 
